2007-10-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* progmodes/gud.el (gud-target-name): Move definition before use.

	* progmodes/dcl-mode.el: Require imenu at compile time.

	* progmodes/cc-engine.el (c-maybe-stale-found-type): Pacify
	byte-compiler.

	* obsolete/fast-lock.el: Use featurep test instead of
	string-match.

	* eshell/esh-mode.el (eshell-handle-ansi-color): Require
	ansi-color at compile time too.

	* eshell/em-unix.el (eshell/info): Require info at compile time
	too.

	* w32-fns.el: Require w32-vars.

	* diff-mode.el (diff-refine-hunk): Require smerge-mode at compile
	time too.

2007-10-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* double.el ([ignore]): Use ignore.
	(double-setup): Inline into double-mode.
	(double-mode): Use define-minor-mode.

2007-10-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* textmodes/reftex.el: Move require easymenu before first use.
	(reftex-info): Require info at compile too.

	* textmodes/org-publish.el (org-publish-org-to-html)
	(org-publish-org-to): Require org at compile time too.
	(org-publish-attachment): Require at compile time too.

	* term/tty-colors.el (w32-tty-standard-colors):
	Pacify byte-compiler.

	* term/pc-win.el (frame-creation-function-alist): Add to this
	instead of setting frame-creation-function.

	* play/blackbox.el (bb-up, bb-down): Use forward-line.

	* net/rcirc.el (rcirc-markup-text-functions): Move definition earlier.

	* calendar/todo-mode.el: Require calendar at compile time.

	* calendar/cal-hebrew.el: Require holidays at compile time.

	* w32-vars.el: Provide w32-vars.

	* term/w32-win.el: Require w32-vars.
	(w32-color-map): Pacify byte-compiler.

	* loadup.el: Load w32-wars before term/w32-win.

2007-10-20  Juri Linkov  <juri@jurta.org>

	* textmodes/fill.el (fill-paragraph): When the region is active,
	don't try other `or' branches regardless of the value returned by
	fill-region; just return t.

2007-10-20  Eric S. Raymond  <esr@snark.thyrsus.com>
